--- a/packages/ocean-core/src/components/_topbar.scss
+++ b/packages/ocean-core/src/components/_topbar.scss
@@ -37,11 +37,8 @@
     display: flex;
     flex-direction: column;
     height: 128px;
+    justify-content: space-between;
     padding: 8px 16px;
-
-    .ods-topbar-title {
-      height: 56px;
-    }
 
     .ods-topbar-actions {
       display: flex;
@@ -63,18 +60,13 @@
   &-left {
     line-height: 0;
     margin-left: 16px;
-    width: 20px;
+    width: 24px;
 
     span {
       align-items: center;
+      cursor: pointer;
       display: flex;
       justify-content: center;
-      width: 20px;
-    }
-
-    span svg {
-      cursor: pointer;
-      width: 18px;
     }
   }
 
@@ -96,18 +88,13 @@
   &-right {
     line-height: 0;
     margin-right: 16px;
-    width: 20px;
+    width: 24px;
 
     span {
       align-items: center;
+      cursor: pointer;
       display: flex;
       justify-content: center;
-      width: 20px;
-    }
-
-    span svg {
-      cursor: pointer;
-      width: 18px;
     }
   }
 }
